# PyGdbRemoteClient

./: .gitignore  LICENSE  README.md  code_quality.sh  make_release.py  pyproject.toml  requirements_code_quality.txt  run_unit_tests.sh  tox.ini  upload_release.sh
.github/workflows/: code_quality.yml  unit_tests.yml
src/gdb_remote_client/: __init__.py  client.py  client_base.py  errors.py  utils.py
tests/gdb_remote_client/: test_client.py  test_client_base.py  test_utils.py
